@@ -81,6 +81,10 @@ Working version
 
 ### Standard library:
 
+- #11856: Rewrite List.concat_map using TRMC, making it faster
+  as well as tail-recursive.
+  (Jeremy Yallop, review by Nicolás Ojeda Bär and Gabriel Scherer)
+
 - #11836: Add `Array.map_inplace`.
   (Léo Andrès, review by Gabriel Scherer and KC Sivaramakrishnan)
 
